# OmniMe

./: .gitignore  AGENT.md  AGENTS.md  ALGS.md  ARCH_SUMMARY.md  CLAUDE.md  FLOW_MAP.md  GEMINI.md  LinuxOpalaCoder.spec  OpalaCoder.spec  README.md  REPORT.md  REQUISITOS.md  agents.yaml  analysis_results.md  build_exe.ps1  build_exe.sh  cli.py  config.yaml  debug_litellm_callbacks.py  direct_gemini_test.py  fix_imports.py  install.ps1  install.sh  interactiveplanner.py  main.py  merge_projects.py  package-lock.json  package.json  plan.md  pyproject.toml  pytest.ini  refactor_errors.py  rename_project.py  requirements.txt  run_cli.py  run_traceback.py  scratch_debug.py  scratch_tail.py  scratch_test.py  (+14 more)
.claude/: settings.json
.claude/rules/: RULES.md
.github/workflows/: cleanup-releases.yml  main.yml  publish.yaml  publish.yml  release.yml
.opalacoder/: code_index.sqlite  code_index.sqlite-shm  code_index.sqlite-wal
abcode/: __init__.py  agents.py  api_keys.py  cli.py  cli_commands.py  config.py  executor.py  i18n.py  orchestrator.py  planner.py  project.py  session.py  skills.py  structured.py  subplan.py  terminal.py  tools.py
config/: ministral_3_14b.yaml
datasets/: jsbench_results.json
datasets/jsbench/: 404-PF__New-Tab__issue235.json  AetherAssembly__MindTab__issue14.json  GeneGulanesJr__LaPis__issue58.json  HankHuang0516__EClaw__issue2806.json  JasonCostanza__Character-Vault__issue130.json  JavaScriptSolidServer__JavaScriptSolidServer__issue456.json  Lellansin__node-pnglib__issue20.json  NSCC-ITC-Assessment__GrillMyCode__issue34.json  NotSleeply__ClawBoard__issue192.json  P-r-e-m-i-u-m__daily-activity__issue114.json  Premshaw23__Learnova__issue158.json  SandeepVashishtha__Eventra__issue1259.json  index.json  (+23 more)
debug/: scratch_tail.py  test_thought_stream.py
docs/: ALGS.md  overview.md  specs1.md  specs2.md  specs3.md
experiments/: run_micalc_test.py  test_gemini.py  test_gemma4.py  test_llm.py
gui_src/: index.html  package-lock.json  package.json  vite.config.js
omnime/: __init__.py  agent_stdin.py  api_keys.py  archival.py  assetstore.py  chat_meta_params.py  cli.py  cli_commands.py  code_index.py  config.py  hardware_detect.py  hardware_store.py  i18n.py  ide_server.py  memgpt_runtime.py  models_store.py  ollama_manager.py  onboarding.py  project.py  skills.py  terminal.py  terminal_manager.py  tools.py  ui_settings.py  vcs.py  vector_index.py  web_search_config.py
opalacoder/: __init__.py  agent_stdin.py  agents.py  api_keys.py  archival.py  assetstore.py  attachments.py  autonomous_orchestrator.py  chat_meta_params.py  cli.py  cli_commands.py  code_index.py  config.py  copy_gui.py  embeddings.py  hardware_detect.py  hardware_store.py  i18n.py  ide_server.py  memgpt.py  memgpt_runtime.py  ollama_manager.py  onboarding.py  orchestrator.py  planner.py  profile_executor.py  profiles.py  project.py  session.py  skills.py  structured.py  terminal.py  terminal_manager.py  tools.py  ui_settings.py  vcs.py  vector_index.py  web_search_config.py  workflow_orchestrator.py  workflow_tools.py
profiles/: frontend_react_vite.yaml
scripts/: collect_jsbench.py  eval_jsbench.py
skills/: abcode.md  debug.md  generaldeveloper.md  html_css_js.md  opalacoder.md  python_subprocess.md  react_vite.md
tests/: test_agent_config.py  test_agent_stdin.py  test_attachments.py  test_chat_meta_params.py  test_code_index_integration.py  test_command_line_skill.py  test_complexity_evaluator.py  test_context_guard.py  test_double_inference.py  test_executor_context_extraction.py  test_file_delete.py  test_i18n_coverage.py  test_implement_feature_script.py  test_intent_classifier.py  test_llm.py  test_llm_no_base.py  test_memgpt.py  test_memgpt_runtime.py  test_model_commands.py  test_new_features.py  test_orchestrator_prompt.py  test_pipeline_integration.py  test_planner_flow.py  test_planner_oracle_live.py  test_planner_output.py  test_project_dir_isolation.py  test_project_store.py  test_refinement_loop.py  test_search_bugs.py  test_skills_directory_loader.py  test_skills_loading.py  test_unhashable_dict_bug.py  test_update_project_params.py  test_verification_strategies.py  test_view_editor_skill.py  test_web_search.py  test_workflow_pipeline.py
(+232 files in other folders)
